--- a/Moh.html
+++ b/Moh.html
@@ -14,7 +14,7 @@
     <div class="section1">
         <h2>الأسم&#58; محمد اشرف سمير العتر</h2>
         <h3>المهنة&#58; مبرمج مبتدئ</h3>
-        <img src="ppp/img.jpg" alt="We can show Picture" width="300px" height="300px">
+        <img src="https://ichef.bbci.co.uk/news/999/cpsprodpb/15951/production/_117310488_16.jpg" alt="We can show Picture" width="300px" height="300px">
     </div>
     <hr>
     <div class="section2">
@@ -67,17 +67,30 @@
     <div class="flooter">
         <h2>تواصل معي</h2>
         <form>
-            <label for="name" >الأسم</label>
-            <input type="text" id="name" required placeholder="الاسم">
+            <div>
+                <label for="name" >الأسم</label>
+            <input type="text" id="name" required placeholder="الثلاسم">
+            </div>
             <br>
-            <br>
-            <label for="email">الإيميل</label>
+            <div>
+                <label for="email">الإيميل</label>
             <input type="text" id="email" required placeholder="الإيميل">
+            </div>
             <br>
-            <br>
+            <div>
             <label for="msg">الرسالة</label>
             <textarea rows="5" id="msg"></textarea>
+            </div>
             <br>
+            الجنس
+            <div>
+                <input id="S" type="radio" name="S">
+                <label for="S">ذكر</label>
+            </div>
+            <div>
+                <input id="S1" type="radio" name="S">
+                <label for="S1">أنثى</label>
+            </div>
             <button>
                 إرسال
             </button>
