--- a/Moh.html
+++ b/Moh.html
@@ -69,7 +69,7 @@
         <form>
             <div>
                 <label for="name" >الأسم</label>
-            <input type="text" id="name" required placeholder="الثلاسم">
+            <input type="text" id="name" required placeholder="الاسم">
             </div>
             <br>
             <div>
