--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammed Ashraf</title>
-    <link rel="stylesheet" href="">
+    <title>title</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
-
 <body>
-    <header>
-        <h1> My page 1</h1>
-        <ul>
-            <li>
-                <a href="page2.html">Go to page 2</a>
-            </li>
-            <li><a href="">Go to page 3</a></li>
-        </ul>
-    </header>
+    <div class="card">
+        <div class="self-tag">SALE</div>
+            <div class="favorate"> &#65039;&#10084;</div>
+            <img class="image" src="https://placehold.co/180x120" alt="So">
+            <h3>Wireless Headphones</h3>
+            <p>Best sound, lightweight, 20h <br> battery.</p>
+            <div class="price">$49.99</div>
+    </div>
 </body>
-
 </html>
